Pre release updating.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "lprq-rs"
 version = "0.1.0"
 edition = "2024"
+description = "A Rust implementation of the LPRQ"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/WilleBerg/lprq-rs"
+homepage = "https://github.com/WilleBerg/lprq-rs"
+keywords = ["queue", "concurrent", "thread-safe", "data-structure"]
+categories = ["data-structures", "concurrency"]
 
 [dependencies]
 crossbeam-utils = "0.8.21"
