--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "lprq-rs"
 version = "0.1.0"
 edition = "2024"
-description = "A Rust implementation of the LPRQ"
+description = "A fast concurrent lock-free FIFO queue."
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/WilleBerg/lprq-rs"
 homepage = "https://github.com/WilleBerg/lprq-rs"
